--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,8 +18,11 @@ management.endpoints.web.exposure.include=*
 
 # Logging
 logging.level.org.springframework=INFO
+logging.level.org.springframework.ai=DEBUG
 # logging.level.org.springframework.web=DEBUG
 # logging.level.org.springframework.context.annotation=TRACE
+logging.level.org.springframework.samples.petclinic=DEBUG
+logging.level.com.azure=DEBUG
 
 # Maximum time static resources should be cached
 spring.web.resources.cache.cachecontrol.max-age=12h
