--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,5 +29,7 @@ spring.web.resources.cache.cachecontrol.max-age=12h
 
 # Spring AI
 # Credentials have to be provided as environment variables
-spring.ai.azure.openai.api-key=${AZURE_OPENAI_KEY}
-spring.ai.azure.openai.endpoint=${AZURE_OPENAI_ENDPOINT}
+#spring.ai.azure.openai.api-key=${AZURE_OPENAI_KEY}
+#spring.ai.azure.openai.endpoint=${AZURE_OPENAI_ENDPOINT}
+
+spring.ai.openai.api-key=${SPRING_AI_OPENAI_API_KEY}
