--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <!-- Web dependencies -->
     <webjars-bootstrap.version>5.3.3</webjars-bootstrap.version>
     <webjars-font-awesome.version>4.7.0</webjars-font-awesome.version>
+    <webjars-marked.version>14.1.2</webjars-marked.version>
 
     <checkstyle.version>10.18.1</checkstyle.version>
     <jacoco.version>0.8.12</jacoco.version>
@@ -121,6 +122,12 @@
       <artifactId>font-awesome</artifactId>
       <version>${webjars-font-awesome.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.webjars.npm</groupId>
+      <artifactId>marked</artifactId>
+      <version>${webjars-marked.version}</version>
+    </dependency>
+
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -458,13 +465,22 @@
     </profile>
     <profile>
       <id>azure-openai</id>
+      <dependencies>
+        <dependency>
+          <groupId>org.springframework.ai</groupId>
+          <artifactId>spring-ai-azure-openai-spring-boot-starter</artifactId>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>openai</id>
       <activation>
         <activeByDefault>true</activeByDefault>
       </activation>
       <dependencies>
         <dependency>
           <groupId>org.springframework.ai</groupId>
-          <artifactId>spring-ai-azure-openai-spring-boot-starter</artifactId>
+          <artifactId>spring-ai-openai-spring-boot-starter</artifactId>
         </dependency>
       </dependencies>
     </profile>
