Add the addPetToOwner function

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,4 @@ spring.web.resources.cache.cachecontrol.max-age=12h
 #spring.ai.azure.openai.endpoint=${AZURE_OPENAI_ENDPOINT}
 
 spring.ai.openai.api-key=${SPRING_AI_OPENAI_API_KEY}
+spring.ai.openai.chat.options.model=gpt-4o-mini
